[Resource Timing] Record and report initiator https://bugs.webkit.org/show_bug.cgi?id=103777

Reviewed by Nate Chapin.

This will start populating the Resource Timing buffer with entries. The initiator will be
recorded for each CachedResourceLoader. This should match the next update of the spec.

Tests: http/tests/w3c/webperf/submission/resource-timing

* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::beginLoadTimerFired):
* loader/ResourceLoadNotifier.cpp: Always record timing information if ENABLE(RESOURCE_TIMING).
(WebCore::ResourceLoadNotifier::dispatchWillSendRequest):
* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::releaseResources): Report the actual resource that called loadDone().
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::loadResource): Record the initiator.
(WebCore::CachedResourceLoader::loadDone): Record the entry in Resource Timing.
* loader/cache/CachedResourceLoader.h:
(CachedResourceLoader):
(InitiatorInfo):

Canonical link: https://commits.webkit.org/122030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136439 268f45cc-cd09-0410-ab3c-d52691b4dbfc