Source/WebCore/loader/ResourceLoadNotifier.cpp
@@ -121,6 +121,10 @@ void ResourceLoadNotifier::dispatchWillSendRequest(DocumentLoader* loader, unsig
     // Report WebTiming for all frames.
     if (loader && !request.isNull() && request.url() == loader->requestURL())
         request.setReportLoadTiming(true);
+
+#if ENABLE(RESOURCE_TIMING)
+    request.setReportLoadTiming(true);
+#endif
 }
 
 void ResourceLoadNotifier::dispatchDidReceiveResponse(DocumentLoader* loader, unsigned long identifier, const ResourceResponse& r, ResourceLoader* resourceLoader)
