Source/WebCore/loader/cache/CachedResourceLoader.h
@@ -120,7 +120,7 @@ public:
     void clearDocumentLoader() { m_documentLoader = 0; }
 
     void removeCachedResource(CachedResource*) const;
-    void loadDone();
+    void loadDone(CachedResource*);
     void garbageCollectDocumentResources();
     
     void incrementRequestCount(const CachedResource*);
@@ -143,7 +143,7 @@ private:
     explicit CachedResourceLoader(DocumentLoader*);
 
     CachedResourceHandle<CachedResource> requestResource(CachedResource::Type, CachedResourceRequest&);
-    CachedResourceHandle<CachedResource> revalidateResource(CachedResource*);
+    CachedResourceHandle<CachedResource> revalidateResource(const CachedResourceRequest&, CachedResource*);
     CachedResourceHandle<CachedResource> loadResource(CachedResource::Type, CachedResourceRequest&, const String& charset);
     void requestPreload(CachedResource::Type, CachedResourceRequest&, const String& charset);
 
@@ -175,6 +175,14 @@ private:
     Deque<PendingPreload> m_pendingPreloads;
 
     Timer<CachedResourceLoader> m_garbageCollectDocumentResourcesTimer;
+
+#if ENABLE(RESOURCE_TIMING)
+    struct InitiatorInfo {
+        AtomicString name;
+        double startTime;
+    };
+    HashMap<CachedResource*, InitiatorInfo> m_initiatorMap;
+#endif
 
     // 29 bits left
     bool m_autoLoadImages : 1;
